--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,104 @@
 
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Environments
-.env/
+.env
+.env.*
 env/
-.venv/
 venv/
+ENV/
+.venv/
+env.bak/
+venv.bak/
+*.env
+.python-version
+.env.local
+.env.development
+.env.test
+.env.production
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 
 # Backups and logs
 *.log
 *.bak
 ugah-ai-backups/
+*.swp
+*.swo
+*~
+.#*
+\#*\#
 
 # Editor/IDE
 .vscode/
 .idea/
-*.swp
+*.sublime-workspace
+*.sublime-project
+.project
+.settings/
+.classpath
+*.code-workspace
+.history/
 
 # Node/npm (if ever used)
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.npm
+.yarn
+.pnp.*
+
+# Coverage and test reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
 
 # Misc
-*.tmp 
+*.tmp
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.pid
+*.seed
+*.pid.lock 
